working on BishopMovesCalculator and finished RookMovesCalculator