@@ -4,14 +4,59 @@ import chess.ChessBoard;
 import chess.ChessPiece;
 import chess.ChessPosition;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
 public class RookMovesCalculator {
-    public RookMovesCalculator(ChessPiece.PieceType piecetype, ChessPosition position, ChessBoard board) {
+    private final ChessBoard board;
+    private final ChessPosition position;
+    private final ChessPiece.PieceType pieceType;
+    public RookMovesCalculator(ChessPosition position, ChessBoard board, ChessPiece.PieceType pieceType) {
+
+        this.board = board;
+        this.position = position;
+        this.pieceType = pieceType;
+
     }
 
     public List<ChessPosition> getPathValid() {
-        return Collections.emptyList();
+        int row = position.getRow();
+        int col = position.getColumn();
+
+        ChessPiece piece = board.getPiece(position);
+
+        List<ChessPosition> rook_valid = new ArrayList<>();
+
+        List<int[]> rook_possible_dir = new ArrayList<>(List.of(new int[]{0, 1}, new int[]{0, -1}, new int[]{-1, 0}, new int[]{1, 0}));
+
+        for (int[] move : rook_possible_dir){
+            int x = row;
+            int y = col;
+            for (int i = 1; i <= 8; i++){
+                x += move[0];
+                y += move[1];
+                //check if on board
+                if (x < 1 || x > 8 || y < 1 || y > 8) {
+                    break;
+                }
+                //create new position and do checks on it
+                ChessPosition new_pos = new ChessPosition(x, y);
+                ChessPiece new_piece = board.getPiece(new_pos);
+                if (new_piece == null) {
+                    rook_valid.add(new_pos);
+                }
+                if (new_piece != null && new_piece.getTeamColor() != piece.getTeamColor()) {
+                    rook_valid.add(new_pos);
+                    break;
+                }
+                if (new_piece != null && new_piece.getTeamColor() == piece.getTeamColor()) {
+                    break;
+                }
+
+            }
+        }
+        return rook_valid;
     }
+
 }
+
